<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dashboard</name>
  <version>1.0.0</version>
  <description>Unified ADAS operator dashboard. Phase 1: AEB monitoring + manual drive.</description>
  <maintainer email="adas@example.com">ADAS Team</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <export><build_type>ament_python</build_type></export>
</package>
