<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>perception</name>
  <version>1.0.0</version>
  <description>Camera (YOLO11n) and LiDAR processing for ADAS. Isolated for crash safety and CPU affinity.</description>
  <maintainer email="adas@example.com">ADAS Team</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>cv_bridge</depend>
  <export><build_type>ament_python</build_type></export>
</package>
